# llama.cpp

docs/: build.md
ggml/: CMakeLists.txt
ggml/cmake/: ggml-config.cmake.in
ggml/include/: ggml-hsa.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-cuda/: fattn-tile.cuh  fattn-wmma-f16.cuh
ggml/src/ggml-hsa/: README.md  aie-kernel.cpp  aie-kernel.hpp  common.hpp  env_setup.sh  ggml-hsa.cpp  kernel-discovery.cpp  requirements-triton.txt  ruff.toml
ggml/src/ggml-hsa/docs/: jit-compilation.md
ggml/src/ggml-hsa/kernels/: CMakeLists.txt  argmax.py  binary_ops.py  build.py  build_iron.py  build_triton.py  clamp.py  count_equal.py  cross_entropy_loss.py  kernel.py  mul_mat.py  scale.py  soft_max.py  tensor_desc.py  unary_ops.py
ggml/src/ggml-hsa/kernels/iron/: argmax.py  binary_ops.py  count_equal.py  cross_entropy_loss.py  gemm.py  scale.py  unary_ops.py
ggml/src/ggml-hsa/kernels/triton/: CMakeLists.txt  __init__.py  utils.py  vecadd.py  vecadd_aie2.mlir
tools/server/: server-context.cpp
